# awesome-agent-quickstart

./: .gitignore  LICENSE  README.md
A2A/: README.md
agno/: READIT.md  README.md  helloworld.py  requirements.txt  with_knowledge_and_storage.py  with_memory_and_reasoning.py
browser-use/: .env.example  READIT.md  README.md  requirements.txt
crewai/: READIT.md  README.md
crewai/helloworld/: .env.example  README.md  pyproject.toml  requirements.txt
crewai/helloworld/src/helloworld/: crew.py  main.py
langchain/: .env.example  README.md  helloworld.py  requirements.txt
langchain-mcp-adapters/: .env.example  READIT.md  README.md  requirements.txt
langchain-sandbox/: READIT.md  README.md  helloworld.py  helloworld_stateful.py  package-lock.json  react.py  requirements.txt  stateful_react.py
langgraph/: .env.example  INTRODUCTION.md  README.md  helloworld.py  requirements.txt
langgraph-codeact/: READIT.md  README.md  helloworld.py  requirements.txt
langgraph-platform/: README.md  client.py  pyproject.toml
langgraph-platform/agents/: __init__.py
langgraph_sandbox/: README.md  codeact.py  package.json
langgraph_swarm/: README.md  config.py  helloworld.py  requirements.txt
langgraphjs/: .env.example  INTRODUCTION.md  README.md  helloworld.ts  helloworld_high_level.ts  helloworld_low_level.ts  helloworld_ollama.ts  package-lock.json  package.json
langmem/: README.md  helloworld.py  requirements.txt
model_context_protocol/: READIT.md  README.md
openai-agents/: .env.example  READIT.md  README.md
smolagents/: README.md  any_llm.py  code_execution.py  (+2 more)
(+17 files in other folders)
